WIP add TOC version of EDB manifest

--- a/_data/manifests.yml
+++ b/_data/manifests.yml
@@ -2,3 +2,5 @@
   filename: M000104-manifest.json
 - title: Barebones newspaper issue
   filename: EDB-1918-11-11-manifest.json
+- title: Newspaper issue with TOC
+  filename: EDB-1918-11-11-toc-manifest.json
