--- a/_data/manifests.yml
+++ b/_data/manifests.yml
@@ -2,5 +2,7 @@
   filename: M000104-manifest.json
 - title: Barebones newspaper issue
   filename: EDB-1918-11-11-manifest.json
-- title: Newspaper issue with TOC
-  filename: EDB-1918-11-11-toc-manifest.json
+- title: Newspaper issue with TOC using ranges
+  filename: EDB-1918-11-11-toc-ranges-manifest.json
+  description: |
+    Articles are listed in the left sidebar, represented by ranges using canvas-level links. Linking to zones on the canvas is theoretically possible under Presentation API 2.1, using [```#xywh``` fragments](https://iiif.io/api/presentation/2.1/#members), but it is not supported by Mirador or Universal Viewer (or at least I can't make it work). The implementation of ranges in 2.1 and is being [redeveloped in 3.0](https://iiif.io/api/presentation/3.0/#54-range).
